syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.stockdata.api.spec.model";

message PriceResponse {
    repeated PriceItemResponse price = 1;
}

message PriceItemResponse {
    string symbol = 1;
    string last_updated_on = 2;
    double last_close = 3;
}

message PriceUpdateRequest {
    repeated PriceItemUpdateRequest price = 1;
}

message PriceItemUpdateRequest {
    string symbol = 1;
    double last_close = 2;
}
