syntax = "proto3";
package stockdata_api;

option java_multiple_files = true;
option java_package = "com.example.stockdata.api.spec.model";

// Used to get price for a symbol or a collection of symbols
message SDPriceResponse {
    repeated SDPriceItem price = 1;
}

message SDPriceItem {
    string symbol = 1;
    string last_updated_on = 2;
    string last_failed_on = 3;
    double last_close = 4;
    bool active = 5;
}

// Used to update price for a symbol or a collection of symbols
message SDPriceUpdateRequest {
    repeated SDPriceItem price = 1;
}

message SDShareDataResponse {
    string symbol = 1;
    string last_updated_on = 2;
    double price = 3;
}

// Used to get last "n" symbols that need to be updated
message SDActiveSymbolsResponse {
    repeated string symbols = 1;
}

message SDUpdateSymbolsRequest {
    repeated string symbols = 1;
}

message ExceptionResponse {
    ExceptionCode code = 1;
    string message = 2;
    string details = 3;
    string timestamp = 4;

    enum ExceptionCode {
        UNKNOWN = 0;
        BAD_REQUEST = 1;
        NO_DATA = 2;
    }
}
